# incott-g23-v2-configurator

./: .gitignore  LICENSE  README.md  pyproject.toml
reverse-engineering/: report.md
reverse-engineering/js-snippets/: browser-console-snippets.md
reverse-engineering/node-js-scripts/: monitor.js  mouse-hid.js  package-lock.json  package.json
reverse-engineering/python-scripts/: CROSSPLATFORM_README.md  debug_hid_id.py  debug_uevent.py  get-feature-report.py  get-settings.py  mouse_hid.py  mouse_monitor_crossplatform.py  read-state-test-2.py  read-state-test.py
src/incott_configurator/: __init__.py  constants.py  main.py
src/incott_configurator/app/: tui.py
src/incott_configurator/domain/: models.py  validation.py
src/incott_configurator/protocol/: __init__.py  commands.py  heartbeat.py
src/incott_configurator/service/: local_settings.py  session.py
src/incott_configurator/transport/: base.py  hidapi_adapter.py
tests/: test_protocol_commands.py  test_protocol_heartbeat.py  test_tui_lod_dirty.py  test_tui_slot_pending.py  test_validation.py
